--- a/TuneHub/src/index.html
+++ b/TuneHub/src/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -8,6 +9,9 @@
  <link rel="icon" type="image/x-icon" href="./assets/images/icon.png">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script>
+    window.global = window;
+  </script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
